Initial code commit
Signed-off-by: Michael Gfeller <mgfeller@mgfeller.net>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+meshops.proto
+
+# Created by https://www.toptal.com/developers/gitignore/api/go
+# Edit at https://www.toptal.com/developers/gitignore?templates=go
+
+### Go ###
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +19,9 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+### Go Patch ###
+/vendor/
+/Godeps/
+
+# End of https://www.toptal.com/developers/gitignore/api/go
