--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,9 @@ meshops.proto
 /vendor/
 /Godeps/
 
+# Miscellaneous
+**errorutil_analyze_errors.json
+**errorutil_analyze_summary.json
+**errorutil_errors_export.json
+
 # End of https://www.toptal.com/developers/gitignore/api/go
