--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Meshery Adapter Library
+name: Default Meshery Adapter Library Workflow
 
 on:
   push:
@@ -23,10 +23,10 @@ jobs:
           go-version: '1.19'
           check-latest: true
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
-          version: latest
+          version: v1.49
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
