--- a/.github/workflows/error-ref-publisher.yaml
+++ b/.github/workflows/error-ref-publisher.yaml
@@ -1,4 +1,4 @@
-name: Meshery Adapter Library Error Codes Utility Runner
+name: Meshkit Error Codes Utility Runner
 on:
   push:
     branches:
@@ -12,14 +12,14 @@ jobs:
     if: github.repository == 'meshery/meshery-adapter-library'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       # token here with write access to meshery-adapter-library repo
         with:
           token: ${{ secrets.GH_ACCESS_TOKEN }}
           ref: 'master'
 
       - name: Setup Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ secrets.GO_VERSION }}
 
@@ -40,7 +40,7 @@ jobs:
 
       # to push changes to meshery docs
       - name: Checkout meshery
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: 'meshery/meshery'
           # token with write access to meshery repository
