--- a/.github/config.yml
+++ b/.github/config.yml
@@ -16,8 +16,14 @@ newPRWelcomeComment: >
 # Comment to be posted to on pull requests merged by a first time user
 firstPRMergeComment: >
   Thanks for your contribution to the Layer5 community! :tada:
-   
-  ![Congrats!](https://raw.githubusercontent.com/meshery/meshery-adapter-library/master/.github/welcome/Layer5-celebration.png)
+  
+  <picture>
+    <source media="(prefers-color-scheme: dark)" srcset=".\welcome\meshery-welcomeImage-dark.png">
+
+    <source media="(prefers-color-scheme: light)" srcset=".\welcome\meshery-welcomeImage-light.png">
+
+    <img alt="Shows a black logo in light color mode and a white one in dark color mode." src="https://user-images.githubusercontent.com/25423296/163456779-a8556205-d0a5-45e2-ac17-42d089e3c3f8.png">
+</picture>
 
 
 #-------------------------------------------------------------------------------
