--- a/.github/config.yml
+++ b/.github/config.yml
@@ -18,9 +18,9 @@ firstPRMergeComment: >
   Thanks for your contribution to the Layer5 community! :tada:
   
   <picture>
-    <source media="(prefers-color-scheme: dark)" srcset=".\welcome\meshery-welcomeImage-dark.png">
+    <source media="(prefers-color-scheme: dark)" srcset="./welcome/meshery-welcomeImage-dark.png">
 
-    <source media="(prefers-color-scheme: light)" srcset=".\welcome\meshery-welcomeImage-light.png">
+    <source media="(prefers-color-scheme: light)" srcset="./welcome/meshery-welcomeImage-light.png">
 
     <img alt="Shows a black logo in light color mode and a white one in dark color mode." src="https://user-images.githubusercontent.com/25423296/163456779-a8556205-d0a5-45e2-ac17-42d089e3c3f8.png">
 </picture>
