Slack Notify on Star - slack.yml
Signed-off-by: Kirtan Patel <73813662+kirtankp@users.noreply.github.com>

--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -2,7 +2,7 @@ name: Slack Notify on Star
 on: watch
 jobs:
   star-notify:
-    name: Notify Slack on star
+    name: Slack Notify on Star
     runs-on: ubuntu-latest
     steps:
     - name: Get current star count
