--- a/.github/workflows/error-ref-publisher.yaml
+++ b/.github/workflows/error-ref-publisher.yaml
@@ -12,7 +12,7 @@ jobs:
     if: github.repository == 'meshery/meshery-adapter-library'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       # token here with write access to meshery-adapter-library repo
         with:
           token: ${{ secrets.GH_ACCESS_TOKEN }}
@@ -25,14 +25,14 @@ jobs:
 
       - name: Run utility
         run: |
-          go get github.com/layer5io/meshkit/cmd/errorutil
-          go run github.com/layer5io/meshkit/cmd/errorutil -d . update --skip-dirs meshery -i ./helpers -o ./helpers
+          go get github.com/meshery/meshkit/cmd/errorutil
+          go run github.com/meshery/meshkit/cmd/errorutil -d . update --skip-dirs meshery -i ./helpers -o ./helpers
       # to update component_info.json in this repo
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_user_name: l5io
-          commit_user_email: ci@layer5.io
+          commit_user_email: ci@meshery.io
           commit_author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           commit_options: '--signoff'
           commit_message: "run error codes utility"
@@ -53,7 +53,7 @@ jobs:
           echo '{ "errors_export": "" }' | jq --slurpfile export ./helpers/errorutil_errors_export.json '.errors_export = $export[0]' > ./meshery/docs/_data/errorref/meshery-adapter-library_errors_export.json
           cd ./meshery
           git config user.name l5io
-          git config user.email ci@layer5.io
+          git config user.email ci@meshery.io
           if git diff --exit-code --quiet
           then
             echo "No changes to commit"
