update golanglintci config
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,47 +1,20 @@
 linters-settings:
-  go-mod-tidy:
-    enabled: true
   gci:
-    enabled: true
     max-len: 120
     line-length: 120
-  goconst:
-    enabled: true
-  gocritic:
-    enabled: true
-    disable:
-      - parallelize
-      - nesting
-      - hugeParam
-      - hugeStruct
-      - nestParam
-      - prealloc
-  govet:
-    enabled: true
-    shadow: true
-    tests: true
-  gofmt:
-    enabled: true
-  unused:
-    enabled: true
-    check-exported: true
-    check-packages: true
-    check-generated: true
-    tests: true
-    allow-unused-type-export: true
-  cyclop:
-    enabled: true
-    average-strictness: 7
-  scopelint:
-    enabled: true
-    tests: true
 
+run:
+  timeout: 5m
 
-# Configuration for golangci-lint that is suitable for a Kubernetes operator project built with Golang
+issues:
+  exclude-dirs:
+    - vendor
+    - bundle
+    - hack
+    - img
+
 linters:
-  enable-all: false
-  disable-all: false
-  linters:
+  enable:
     - gci
     - goconst
     - gocritic
@@ -49,17 +22,3 @@ linters:
     - gofmt
     - unused
     - cyclop
-    - scopelint
-  exclude-rules:
-    - testpackage
-
-run:
-  timeout: 5m
-  enable-cache: true
-
-issues:
- exclude-dirs:
-    - vendor
-    - bundle
-    - hack
-    - img
