fix: update CI configuration for golangci-lint and Go version
Signed-off-by: lekaf974 <matthieu.evrin@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,41 +1,4 @@
-linters-settings:
-  go-mod-tidy:
-    enabled: true
-  gci:
-    enabled: true
-    max-len: 120
-    line-length: 120
-  goconst:
-    enabled: true
-  gocritic:
-    enabled: true
-    disable:
-      - parallelize
-      - nesting
-      - hugeParam
-      - hugeStruct
-      - nestParam
-      - prealloc
-  govet:
-    enabled: true
-    shadow: true
-    tests: true
-  gofmt:
-    enabled: true
-  unused:
-    enabled: true
-    check-exported: true
-    check-packages: true
-    check-generated: true
-    tests: true
-    allow-unused-type-export: true
-  cyclop:
-    enabled: true
-    average-strictness: 7
-  scopelint:
-    enabled: true
-    tests: true
-
+version: "2"
 
 # Configuration for golangci-lint that is suitable for a Kubernetes operator project built with Golang
 linters:
@@ -49,13 +12,14 @@ linters:
     - cyclop
     - scopelint
   disable:
-      - testpackage
+    - testpackage
   exclusions:
     paths:
       - vendor
       - bundle
       - hack
       - img
+      - doc
 
 run:
   timeout: 5m
